# bachelors-thesis-notebooks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  STATES.md  justfile  pyproject.toml  state.md  test.csv
benchmark/: __init__.py  api.py  benchmark.py  file.py
code-duplication/: 1_measurement.ipynb  2_visualization.ipynb  code-duplication.ipynb
code-duplication/data/: service-duplication_environment-independence_after.csv  service-duplication_service-merge_before.csv
code-duplication/tables/: overall-duplication.tex  service-duplication_environment-independence_after.tex  service-duplication_environment-independence_before.tex  service-duplication_service-merge_after.tex  service-duplication_service-merge_before.tex
compose/after/: docker-compose.yml
compose/before/: .env  dbrepo.conf  docker-compose.yml
compose/queue/: .env  docker-compose.yml
memory-usage/: 1_measurement.ipynb  2_visualitzation.ipynb  2_visualization.ipynb
memory-usage/data/: environment-independence-after.csv  environment-independence-before.csv  service-merge-before.csv
memory-usage/tables/: service-memory-usage.tex
notebooks/: 1_benchmarking.ipynb  2_visualization.ipynb  runtime_1_benchmarking.ipynb  runtime_2_visualization.ipynb
notebooks/runtime/: 1_benchmarking.ipynb  2_visualization.ipynb
runtime/: 1_measurement.ipynb  2_visualization.ipynb
runtime/data/: cold-start_environment-independence_after.csv  cold-start_service-merge_after.csv  create-query_environment-independence_after.csv  create-query_service-merge_after.csv  insert-row_service-merge_after.csv  (+5 more)
(+31 files in other folders)
